[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
bit-set = "0.5.3"
bitvec = "1.0.1"
enum-map = "2.7.3"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
strum = { version = "0.25.0", features = ["derive"] }
